Latest fake news detector uploaded from colab

--- a/fake_news_detector_nlp.ipynb
+++ b/fake_news_detector_nlp.ipynb
@@ -8029,7 +8029,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Test with real articles**"
+        "# **Test with real articles**"
       ],
       "metadata": {
         "id": "eH9FQnZz-Apv"
@@ -8476,7 +8476,7 @@
     "colab": {
       "collapsed_sections": [],
       "provenance": [],
-      "authorship_tag": "ABX9TyN86OSLo626w9j9Sn9mbd7p",
+      "authorship_tag": "ABX9TyMju9WViR/3EnUWn65xR+eY",
       "include_colab_link": true
     },
     "kernelspec": {
